[workspace]
members = [
    "article-filter",
    "article-indexer",
    "geo",
    "search",
]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "0.2.121"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
geojson = "1.0.0"
js-sys = "0.3.98"
kdtree = "0.7"
chrono = { version = "0.4.44", features = ["serde", "wasmbind"] }
bincode = { version = "2.0.1", features = ["serde"] }
flate2 = "1.1.9"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.98", features = ["console"] }
regex = "1.12.3"
clap = { version = "4.6.1", features = ["suggestions", "color"] }
walkdir = "2.5.0"
html5ever = "0.39.0"
markup5ever_rcdom = "0.39.0"
once_cell = "1.21.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
overflow-checks = false
