[workspace]
members = [
    "geo",
]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "0.2.121"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
geojson = "1.0.0"
js-sys = "0.3.98"
kdtree = "0.7"
chrono = { version = "0.4.44", features = ["serde", "wasmbind"] }
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.98", features = ["console"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
overflow-checks = false
