[package]
name = "search-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly module for article search functionality"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O",
    "--enable-bulk-memory",
    "--enable-bulk-memory-opt",
    "--enable-nontrapping-float-to-int",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
js-sys.workspace = true
bincode.workspace = true
flate2.workspace = true
console_error_panic_hook.workspace = true
regex.workspace = true
utils-common = { path = "../utils-common" }
wee_alloc = { workspace = true, optional = true }
once_cell.workspace = true
